<resources>
    <string name="app_name">ToDo</string>
    <!--assign task screen string resources-->
    <string name="remove_all_edittext_button_name">Remove All Tasks</string>
    <string name="tasks_instructions_hint">Type in the name of the tasks</string>
    <string name="add_task_button_name">Add Task</string>
    <string name="assign_task_title_name">Tasks</string>
    <string name="task_hint">Task</string>
    <string name="set_button_name">Assign task names</string>
    <string name="remove_edittext_button_name">Remove Task</string>
    <!--assign timers screen string resources-->
    <string name="timer_instructions_hint">Enter the number of seconds for each task</string>
    <string name="title_activity_set_timer_screen">Set Timers</string>
    <string name="assign_timers_title_name">Timers</string>
    <string name="timers_hint">Time in seconds</string>
    <string name="back_button_name">Back</string>
    <string name="start_button_name">Start</string>

</resources>